Merge trunk
Find
Perf enhancement